--- a/HelloDoc/appsettings.json
+++ b/HelloDoc/appsettings.json
@@ -9,5 +9,10 @@
   "Jwt": {
     "Key": "YourSecretKeyForAuthenticationOfApplication",
     "Issuer": "youtCompanyIssuer.com"
+  },
+  "EPPlus": {
+    "ExcelPackage": {
+      "LicenseContext": "Commercial" //The license context used
+    }
   }
 }
